--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@
                     <img src="images/logo.png" alt="">
                     <p class="bg-transparent font-bold text-2xl md:text-4xl border-0 text-white"> Fruits Brust</p>
                 </div>
-                <nav class="grid grid-flow-col gap-3 md:gap-5">
+                <nav class="grid md:grid-flow-col grid-cols-3 gap-3 md:gap-5">
                     <a class="link link-hover">Home</a>
                     <a class="link link-hover">About us</a>
                     <a class="link link-hover">Shop</a>
